k8s-deployment/stage/stage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage-ingress
  namespace: stage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - stage.basicproject.dev
      secretName: stage-cert-tls

  rules:
    - host: stage.basicproject.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
